tests/ui/const-generics/issues/issue-90364.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-90364.rs:4:28
   |
LL | pub struct Foo<T, const H: T>(T)
   |                            ^ the type must not depend on the parameter `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0770`.
